--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -50,7 +50,7 @@
     --text-mode-color:#D0D0D0;
 }
 
-.container {
+.root-container {
     max-width: 480px;
     padding: 0 10px 100px 10px;
     margin: 0 auto;
