--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 
 //Pages and components styles
 @import "index";
+@import "gauge.scss";
 @import "eva_button";
 @import "eva_login";
 @import "eva_state";
